--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <center>
             <span>
                 <button onclick="decrease()">
-                <img src="C:\Users\koppa\OneDrive\Pictures\Screenshot 8.png" style="height:100px;width:100px;">decrease</button>
+                <img src="Screenshot%208.png" style="height:100px;width:100px;">decrease</button>
                 <button onclick="increase()">
                  <img src="https://cdn-icons-png.flaticon.com/512/7256/7256374.png" style=" height:100px;width: 100px;">increase</button>
             </span>
